--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Добро пожаловать в справочник web-програмиста</h1>
     </header>
     <section class="glava2">
-        <h2 class="glava">Здесь вы увидите все теги таких языков как: html,css,php</h2>
+        <h2 class="glava">Здесь вы увидите все теги таких языков как: html,css, JavaScript, php</h2>
     </section>
 
     <hr color>
