--- a/css.html
+++ b/css.html
@@ -28,8 +28,9 @@
     <hr clor>
     <br>
     <section>
-        <table style="border-radius: 15px; border-style: solid">
-            <tbody id="1">
+        <h2 id="1">Шрифт</h2>
+        <table  style="border-radius: 15px; border-style: solid">
+            <tbody >
                 <th>Свойство</th>
                 <th>Свойства шрифта</th>
                 <tr>
@@ -60,9 +61,9 @@
         </table>
         <br>
         <hr color>
-        <br>
-        <table style="border-radius: 15px; border-style: solid">
-            <tbody id="2">
+        <h2 id="2">Цвет</h2>
+        <table  style="border-radius: 15px; border-style: solid">
+            <tbody >
                 <th>Свойство</th>
                 <th>Цвет элемента и цвет фона</th>
                 <tr>
@@ -77,9 +78,9 @@
         </table>
         <br>
         <hr color>
-        <br>
+        <h2 id="3" >Текст</h2>
     <table style="border-radius: 15px; border-style: solid">
-        <tbody id="3">
+        <tbody >
             <th>Свойство</th>
             <th>Текст</th>
             <tr>
@@ -113,9 +114,9 @@
     </table>
     <br>
     <hr color>
-    <br>
-    <table style="border-radius: 15px; border-style: solid">
-        <tbody id="4">
+    <h2 id="4">Границы</h2>
+    <table  style="border-radius: 15px; border-style: solid">
+        <tbody >
             <th>Свойство</th>
             <th>Границы</th>
             <tr>
@@ -133,14 +134,14 @@
     </table>
     <br>
     <hr color>
-    <br>
-    <table style="border-radius: 15px; border-style: solid">
-        <tbody id="5">
+    <h2 id="5">Единицы измерения</h2>
+    <table   style="border-radius: 15px; border-style: solid">
+        <tbody>
             <th>Свойство</th>
             <th>Единица измерения</th>
             <tr>
                 <td>px</td>
-                <td>Пикселы</td>
+                <td>Пиксели</td>
             </tr>
             <tr>
                 <td>cm</td>
